<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.componentList.ComponentListActivity"
    tools:visibility="visible">

    <HorizontalScrollView
        android:id="@+id/category_scroll_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:orientation="horizontal"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/category_tower"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/tower"
                    android:scaleType="fitCenter"
                    android:src="@drawable/tower_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tower"
                    android:textAppearance="?attr/textAppearanceCaption" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/category_motherboard"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/motherboard"
                    android:scaleType="fitCenter"
                    android:src="@drawable/motherboard_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/motherboard"
                    android:textAppearance="?attr/textAppearanceCaption" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/category_cpu"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/cpu"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cpu_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cpu"
                    android:textAppearance="?attr/textAppearanceCaption" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/category_gpu"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/gpu"
                    android:scaleType="fitCenter"
                    android:src="@drawable/gpu_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/gpu"
                    android:textAppearance="?attr/textAppearanceCaption" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/category_memory"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/memory"
                    android:scaleType="fitCenter"
                    android:src="@drawable/memory_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/memory"
                    android:textAppearance="?attr/textAppearanceCaption" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/category_cooler"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/cooler"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cooler_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cooler"
                    android:textAppearance="?attr/textAppearanceCaption" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/category_storage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/storage"
                    android:scaleType="fitCenter"
                    android:src="@drawable/storage_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/storage"
                    android:textAppearance="?attr/textAppearanceCaption" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/category_psu"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/psu"
                    android:scaleType="fitCenter"
                    android:src="@drawable/psu_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/psu"
                    android:textAppearance="?attr/textAppearanceCaption" />
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/searchComponentHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Search Component"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_scroll_view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="Search for a component"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchComponentHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/bottom_button_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnNewComponent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:text="New Component"
            android:textColor="@android:color/black"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnOkCompSelect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:text="OK"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/component_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_button_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:listitem="@layout/component_list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>